[package]
name = "fns"
version = "0.0.7"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["sanmu <578595193@qq.com>"]
#include = ["src/**/*.rs", "README.md"]
readme = "../README.md"
repository = "https://github.com/cargo-crates/fns"
categories = ["data-structures"]
keywords = ["debounce", "throttle"]
description = """
add common fn, eg: debounce, throttle ...
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"